tests/auto/qxmlstream/XML-Test-Suite/xmlconf/ibm/invalid/P68/ibm68i04.ent
<!ELEMENT a EMPTY>
<!ATTLIST a attr1 CDATA "&ge1;">
<!ENTITY ge1 "abcdef">
<!--* GE reference in attr default before declaration *-->
